# llm-judge-audit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
llm_judge_audit/: cli.py  config.py  judge.py  logger.py  mitigations.py  prompts.yaml  report.py  runtime.py
llm_judge_audit/biases/: __init__.py  anchoring.py  base.py  confidence_gap.py  cross_run.py  domain_transfer.py  format_bias.py  position.py  recency.py  self_enhancement.py  sycophancy.py  verbosity.py
llm_judge_audit/datasets/: __init__.py  anchor.json  download.py  migrate.py  prolific.py  prolific_tasks.csv  schema.py
llm_judge_audit/scoring/: __init__.py  has.py  jri.py  thresholds.py
tests/: conftest.py  test_biases.py  test_download.py  test_judge.py  test_prolific.py  test_report.py  test_schema.py  test_scoring.py
